Spring egg search

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" style="margin:auto;position:relative;width:100%;height:100%;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?75374"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?58964"></script>
 	</div>
 
 	<!-- end copy -->
@@ -49,7 +49,7 @@
 		<div>said</div>
 		<div>this</div>
 		<div>can</div>
-		<div>On the next page, click the circle that looks like this and drag it around to find sight words.  Use a piece of paper to wirte down the words you find.  
+		<div>On the next page, click the circle that looks like this and drag it around to find sight words.  Use a piece of paper to write down the words you find.  
 Click GO when you are ready.
 
 HINT:  There are 13 hidden words.</div>
